fix: Arregle error 500 al crear ciertas actividades